--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,8 @@
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <userName>FinalProject4</userName>
+  <name>FinalProject4</name>
   <url>http://maven.apache.org</url>
-
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
